--- a/src/intro_window/IntroWindow.form
+++ b/src/intro_window/IntroWindow.form
@@ -35,7 +35,7 @@
             <MenuItem class="javax.swing.JMenuItem" name="file_new_menu_item">
               <Properties>
                 <Property name="accelerator" type="javax.swing.KeyStroke" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                  <Connection code="makeShortcut(java.awt.event.KeyEvent.VK_N)" type="code"/>
+                  <Connection code="ViewUtilities.makeShortcut(java.awt.event.KeyEvent.VK_N)" type="code"/>
                 </Property>
                 <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
                   <ResourceString bundle="document/Bundle.properties" key="FileMenu.New" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
@@ -45,7 +45,7 @@
             <MenuItem class="javax.swing.JMenuItem" name="file_open_menu_item">
               <Properties>
                 <Property name="accelerator" type="javax.swing.KeyStroke" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                  <Connection code="makeShortcut(java.awt.event.KeyEvent.VK_O)" type="code"/>
+                  <Connection code="ViewUtilities.makeShortcut(java.awt.event.KeyEvent.VK_O)" type="code"/>
                 </Property>
                 <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
                   <ResourceString bundle="document/Bundle.properties" key="FileMenu.Open" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
